# Snake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SnakeGame  cmake_install.cmake  main.cpp
.cmake/api/v1/reply/: cache-v2-8eb1c5d9b006325e95e6.json  cmakeFiles-v1-90e7e551470bf1345ec5.json  cmakeFiles-v1-bf081b5bd37e7a1feff4.json  codemodel-v2-73d06b5c6958edc1a00c.json  codemodel-v2-ddcf193e5be1ddcd1f2a.json  index-2022-08-08T19-58-51-0074.json  index-2022-08-09T06-12-05-0522.json  target-SnakeGame-Debug-9b5e57966309912f4894.json  target-SnakeGame-Debug-dd848a8cccaa35576d25.json
include/: BoardGui.h  BoardLogic.h  BodyFull.h  BodyPiece.h  Direction.h  Food.h  Position.h  PowerUp.h
output/: Snake
src/: BoardLogic.cpp  BodyFull.cpp  BodyPiece.cpp  Food.cpp  main.cpp
src/GUI/: BoardGui.cpp
src/Logic/: BoardLogic.cpp  BodyFull.cpp  BodyPiece.cpp  Direction.cpp  Food.cpp  Position.cpp  PowerUp.cpp
